test/good/functions/nested2.px

for i in 1..3 do
    func f(Int x) Int def
        return x * i
    print f(i)
