test/bad/functions/nested01.px

for i in 1..2 do
    func f() Int def
        break
        return 0
    f()
    print i
